--- a/appsite/templates/main/map_create.html
+++ b/appsite/templates/main/map_create.html
@@ -1,14 +1,17 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-<form action="" method="POST">
-  {% csrf_token %}
-  {% for field in form %}
-  <div class="mb-3">
-    {{ field.label }}
-    {{ field }}
-  </div>
-  {% endfor %}
-  <button type="submit" class="btn btn-primary">Отправить</button>
-</form>
+<div class="col-6 mx-auto">
+  {{ form.errors }}
+  <form class="form-control" action="" method="POST">
+    {% csrf_token %}
+    {% for field in form %}
+    <div class="mb-3">
+      {{ field.label }}
+      {{ field }}
+    </div>
+    {% endfor %}
+    <button type="submit" class="btn btn-primary">Отправить</button>
+  </form>
+</div>
 {% endblock %}
