--- a/appsite/templates/main/map_create.html
+++ b/appsite/templates/main/map_create.html
@@ -3,14 +3,9 @@
 {% block content %}
 <div class="col-6 mx-auto">
   {{ form.errors }}
-  <form class="form-control" action="" method="POST">
+  <form class="form-control" action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {% for field in form %}
-    <div class="mb-3">
-      {{ field.label }}
-      {{ field }}
-    </div>
-    {% endfor %}
+    {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Отправить</button>
   </form>
 </div>
