--- a/appsite/templates/main/map_view.html
+++ b/appsite/templates/main/map_view.html
@@ -1,12 +1,21 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block content %}
-<div class="card">
-  <img src="{{map.img.url}}" class="card-img-top" alt="Map-{{map.title}}">
-  <div class="card-body">
-    <h5 class="card-title">{{map.title}}</h5>
-    <p class="card-text">Статистика по карте</p>
-    <a href="#" class="btn btn-primary">Изучить</a>
+<div class="container-md">
+  <div class="row">
+    <!-- Блок с названием и изображением -->
+    <div class="col-3">
+      <h1>{{ map.title }}</h1>
+      <img src="/media/{{ map.img }}" class="img-fluid" alt="Фон карты '{{ map.title }}'">
+    </div>
+    <!-- Блок описанием и статистикой -->
+    <div class="col-9">
+      <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%; background-color: #0672c9">ATK</div>
+        <div class="progress-bar" style="width: 75%; background-color: #d8620b">DEF</div>
+      </div>
+      <div class="col">Описание карты</div>
+    </div>
   </div>
 </div>
 {% endblock %}
