Вывод всех карт

--- a/appsite/templates/main/index.html
+++ b/appsite/templates/main/index.html
@@ -2,5 +2,16 @@
 {% load static %}
 
 {% block content %}
-Контент
+<div class="container-md">
+    {% for map in maps %}
+    <div class="card" style="width: 18rem;">
+      <img src="media/{{ map.img }}" class="card-img-top" alt="{{ map.title }}">
+      <div class="card-body">
+        <h5 class="card-title">{{ map.title|upper }}</h5>
+        <p class="card-text">Описание карты</p>
+        <a href="/map/info/{{ map.title }}" class="btn btn-primary">Перейти</a>
+      </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
