Обновлены URL страницы карт

--- a/appsite/templates/main/index.html
+++ b/appsite/templates/main/index.html
@@ -9,7 +9,7 @@
       <div class="card-body">
         <h5 class="card-title">{{ map.title|upper }}</h5>
         <p class="card-text">Описание карты</p>
-        <a href="/map/info/{{ map.title }}" class="btn btn-primary">Перейти</a>
+        <a href="/map/{{ map.title }}/info" class="btn btn-primary">Перейти</a>
       </div>
     </div>
     {% endfor %}
