Страница создания позиции

--- a/appsite/templates/base/header.html
+++ b/appsite/templates/base/header.html
@@ -7,6 +7,7 @@
 
   <ul class ="nav nav-underline align-items-end">
     <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-    <li class="nav-item"><a href="/map/create" class="nav-link">Map Create</a></li>
+    <li class="nav-item"><a href="/map/create" class="nav-link">New Map</a></li>
+    <li class="nav-item"><a href="/place/create" class="nav-link">New Place</a></li>
   </ul>
 </header>
