--- a/appsite/templates/main/map_view.html
+++ b/appsite/templates/main/map_view.html
@@ -32,7 +32,7 @@
     <div class="row">
     {% for level in levels %}
       <div class="col-md-6 col-lg-3">
-        <img src="https://i.ytimg.com/vi/fCcosDGKCNM/maxresdefault.jpg" class="img-fluid">
+        <img src="https://steamuserimages-a.akamaihd.net/ugc/398930471900304069/E369AA5BEC9DBE9E5A4DD2B686EA12F644DCC661/" class="img-fluid">
         <p class="text-center">Позиция {{level}}</p>
       </div>
     {% endfor %}
