--- a/appsite/templates/main/map_create.html
+++ b/appsite/templates/main/map_create.html
@@ -1,12 +1,19 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="col-6 mx-auto">
   {{ form.errors }}
+
   <form class="form-control" action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    <img id="frame" class="img-fluid rounded mx-auto d-block mb-3">
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Отправить</button>
   </form>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'js/upload_image_preview.js' %}"></script>
 {% endblock %}
