Дефолтное изображение, кнопка создания позиции на странице карты

--- a/appsite/templates/main/map_view.html
+++ b/appsite/templates/main/map_view.html
@@ -37,6 +37,7 @@
       </div>
     {% endfor %}
     </div>
+    <a class="btn btn-primary" href="/map/{{ map.title | lower }}/place/create">Добавить позицию</a>
   </div>
 </div>
 {% endblock %}
