--- a/appsite/templates/main/map_create.html
+++ b/appsite/templates/main/map_create.html
@@ -7,7 +7,7 @@
 
   <form class="form-control" action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <img id="frame" class="img-fluid rounded mx-auto d-block mb-3">
+    <img id="frame" class="img-fluid rounded mx-auto d-block mb-3" src="https://i.sstatic.net/y9DpT.jpg">
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Отправить</button>
   </form>
